test/typecheck/pass/bitfield_exponential.sail
default Order dec

$include <prelude.sail>

type xlen : Int = 2 ^ 2

bitfield foo : bits(xlen) = {
  A : 0,
}
