test/typecheck/fail/bitfield_error.sail
default Order dec

$include <prelude.sail>

bitfield foo : bits(15) = {
  b : 0 .. 15,
}
